# manage-infrastructure-base

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Justfile  README.md
.github/: pull_request_template.md
.github/actions/prepare-env/: action.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  Justfile  pyproject.toml
frontend/: .env.sample  Dockerfile  Justfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
infrastructure/: .terraform.lock.hcl  .tflint.hcl  Dockerfile  data.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infrastructure/envs/dev/: backend.conf
infrastructure/envs/prod/: backend.conf
