[project]
name = "backend"
version = "0.1.0"
description = "Backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
